force-app/main/default/objects/Contractor_Engagement__c/Contractor_Engagement__c.object-meta.xml
<CustomObject>
    <description>Represents a contractor working on a specific client opportunity. Critical for staffing visibility, margin reporting, and capacity planning.</description>
    <label>Contractor Engagement</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Engagement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>