force-app/main/default/objects/Contractor_Engagement__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Engagements</relationshipLabel>
    <relationshipName>Client_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>