force-app/main/default/objects/Contractor_Engagement__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contractor Engagements</relationshipLabel>
    <relationshipName>Contractor_Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>