force-app/main/default/objects/Contractor_Engagement__c/fields/Contractor_Firm__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Firm__c</fullName>
    <label>Contractor Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contractor Engagements</relationshipLabel>
    <relationshipName>Contractor_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>