force-app/main/default/objects/Contractor_Engagement__c/fields/Cost_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cost_Rate__c</fullName>
    <label>Cost Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>