force-app/main/default/objects/Contractor_Engagement__c/fields/Engagement_Role__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Role__c</fullName>
    <label>Engagement Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Data Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Salesforce Developer</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>