force-app/main/default/objects/Contractor_Engagement__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <formula>IF(
  AND( Bill_Rate__c &gt; 0, Cost_Rate__c &gt; 0 ),
  (Bill_Rate__c - Cost_Rate__c) / Bill_Rate__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>