force-app/main/default/objects/Contractor_Engagement__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The delivery project this engagement is part of</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Contractor Engagements</relationshipLabel>
    <relationshipName>Contractor_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>