force-app/main/default/objects/Contractor_Engagement__c/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <description>Total billable amount for this engagement</description>
    <label>Total Billed</label>
    <summarizedField>Time_Entry__c.Billable_Amount__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Contractor_Engagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>