force-app/main/default/objects/Contractor_Engagement__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Total cost for this engagement</description>
    <label>Total Cost</label>
    <summarizedField>Time_Entry__c.Cost_Amount__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Contractor_Engagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>