force-app/main/default/objects/Contractor_Engagement__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Total hours logged on this engagement</description>
    <label>Total Hours</label>
    <summarizedField>Time_Entry__c.Hours__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Contractor_Engagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>